--- a/far_solar_system/index.html
+++ b/far_solar_system/index.html
@@ -24,7 +24,7 @@
         <section id="pluto">
             <div class="planet">
                 <div class="content">
-                    <a href="https://en.wikipedia.org/wiki/Pluto" target="_blank"><img src="../Images/pluto_picture.png" alt="Pluto picture" class="picture"></a>
+                    <a href="../information_pages/pluto.html"><img src="../Images/pluto_picture.png" alt="Pluto picture" class="picture"></a>
                     <div class="text">
                         <h2>Pluto</h2>
                         <p>Pluto, the dwarf planet, lies in the icy Kuiper Belt and is known for its heart-shaped glacier and mysterious surface.</p>
@@ -34,7 +34,7 @@
         </section>
         <section id="halleys" class="planet">
             <div class="content">
-                <a href="https://en.wikipedia.org/wiki/Mercury_(planet)" target="_blank"><img src="../Images/halley_comet_picture.png" alt="Halley's comet picture" class="picture"></a>
+                <a href="../information_pages/comets.html"><img src="../Images/halley_comet_picture.png" alt="Halley's comet picture" class="picture"></a>
                 <div class="text">
                     <h2>Halley's comet</h2>
                     <p>The most famous periodic comet, Halley's Comet, dazzles Earth every 76 years with its radiant tail and storied past.</p>
@@ -43,7 +43,7 @@
         </section>
         <section id="haumea" class="planet">
             <div class="content">
-                <a href="https://en.wikipedia.org/wiki/Venus" target="_blank"><img src="../Images/haumea_picture.png" alt="Haumea picture" class="picture"></a>
+                <a href="../information_pages/haumea.html"><img src="../Images/haumea_picture.png" alt="Haumea picture" class="picture"></a>
                 <div class="text">
                     <h2>Haumea</h2>
                     <p>A dwarf planet with an unusual elongated shape, Haumea stands out with its rapid rotation and icy surface.</p>
@@ -52,7 +52,7 @@
         </section>
         <section id="eris" class="planet">
             <div class="content">
-                <a href="https://en.wikipedia.org/wiki/Earth" target="_blank"><img src="../Images/eris_picture.png" alt="Eris picture" class="picture"></a>
+                <a href="../information_pages/eris.html"><img src="../Images/eris_picture.png" alt="Eris picture" class="picture"></a>
                 <div class="text">
                     <h2>Eris</h2>
                     <p>A dwarf planet more massive than Pluto, Eris resides in the distant Kuiper Belt, challenging our definition of planets.</p>
@@ -61,7 +61,7 @@
         </section>
         <section id="makemake" class="planet">
             <div class="content">
-                <a href="https://en.wikipedia.org/wiki/Mars" target="_blank"><img src="../Images/makemake.png" alt="Makemake picture" class="picture"></a>
+                <a href="../information_pages/makemake.html"><img src="../Images/makemake.png" alt="Makemake picture" class="picture"></a>
                 <div class="text">
                     <h2>Makemake</h2>
                     <p>This reddish dwarf planet is one of the coldest objects in the solar system, quietly orbiting in the far reaches of space.</p>
@@ -70,7 +70,7 @@
         </section>
         <section id="sedna" class="planet">
             <div class="content">
-                <a href="https://en.wikipedia.org/wiki/Jupiter" target="_blank"><img src="../Images/sedna_picture.png" alt="Jupiter picture" class="picture"></a>
+                <a href="../information_pages/sedna.html"><img src="../Images/sedna_picture.png" alt="Jupiter picture" class="picture"></a>
                 <div class="text">
                     <h2>Sedna</h2>
                     <p>An enigmatic, far-flung planetoid, Sedna’s mysterious orbit hints at the hidden wonders of our solar system's edge.</p>
