--- a/information_pages/comets.html
+++ b/information_pages/comets.html
@@ -22,9 +22,10 @@
                     This is a detailed description of the celestial body. You can include information such as its composition, orbit, atmosphere, interesting facts, and why it's significant in our solar system.
                 </p>
                 <ul>
-                    <li><strong>Diameter:</strong> X km</li>
-                    <li><strong>Orbit:</strong> Y AU from the Sun</li>
-                    <li><strong>Interesting Fact:</strong> Some cool fact about this planet.</li>
+                    <li><strong>Diameter:</strong> 11 km</li>
+                    <li><strong>Orbit:</strong> 0.59 AU from the Sun at closest <br>
+                    35.1 AU from the Sun at furthest</li>
+                    <li><strong>Interesting Fact:</strong> Halley’s Comet is the most famous comet because it's visible from Earth roughly once every 76 years. It's the only naked-eye comet visible from Earth twice in a lifetime, making it a rare and memorable sight for many people.</li>
                 </ul>
             </div>
         </section>
@@ -34,7 +35,7 @@
 
     <script>
         document.getElementById('backButton').addEventListener('click', () => {
-            window.location.href = '../index.html';
+            window.location.href = '../far_solar_system/index.html';
         });
     </script>
 </body>
