--- a/information_pages/earth.html
+++ b/information_pages/earth.html
@@ -22,9 +22,10 @@
                     This is a detailed description of the celestial body. You can include information such as its composition, orbit, atmosphere, interesting facts, and why it's significant in our solar system.
                 </p>
                 <ul>
-                    <li><strong>Diameter:</strong> X km</li>
-                    <li><strong>Orbit:</strong> Y AU from the Sun</li>
-                    <li><strong>Interesting Fact:</strong> Some cool fact about this planet.</li>
+                    <li><strong>Diameter:</strong> 12,742 km</li>
+                    <li><strong>Orbit:</strong> 1 AU from the Sun (149.6 million km)</li>
+                    <li><strong>Interesting Fact:</strong> Earth's rotation is slowing down over time. In about 140 million years, a day on Earth will be 25 hours long instead of 24. <br>
+                        A day on Earth isn't exactly 24 hours. It's actually 23 hours, 56 minutes, and 4 seconds – the time it takes for Earth to complete a full rotation relative to distant stars.</li>
                 </ul>
             </div>
         </section>
