--- a/information_pages/jupiter.html
+++ b/information_pages/jupiter.html
@@ -22,9 +22,9 @@
                     This is a detailed description of the celestial body. You can include information such as its composition, orbit, atmosphere, interesting facts, and why it's significant in our solar system.
                 </p>
                 <ul>
-                    <li><strong>Diameter:</strong> 12,104 km</li>
-                    <li><strong>Orbit:</strong> 0.72 AU from the Sun</li>
-                    <li><strong>Interesting Fact:</strong> Venus is the hottest planet in the Solar System, with surface temperatures often exceeding 460°C, even though it's not the closest planet to the Sun.</li>
+                    <li><strong>Diameter:</strong> 139,820 km</li>
+                    <li><strong>Orbit:</strong> 5.20 AU from the Sun</li>
+                    <li><strong>Interesting Fact:</strong> Jupiter has the largest storm in the Solar System, the famous Great Red Spot, which has been raging for over 400 years!</li>
                 </ul>
             </div>
         </section>
