--- a/information_pages/makemake.html
+++ b/information_pages/makemake.html
@@ -22,9 +22,9 @@
                     This is a detailed description of the celestial body. You can include information such as its composition, orbit, atmosphere, interesting facts, and why it's significant in our solar system.
                 </p>
                 <ul>
-                    <li><strong>Diameter:</strong> X km</li>
-                    <li><strong>Orbit:</strong> Y AU from the Sun</li>
-                    <li><strong>Interesting Fact:</strong> Some cool fact about this planet.</li>
+                    <li><strong>Diameter:</strong> 1,430 km</li>
+                    <li><strong>Orbit:</strong> 45.7 AU from the Sun</li>
+                    <li><strong>Interesting Fact:</strong> Makemake is one of the brightest objects in the Kuiper Belt, and it's named after a deity from Easter Island mythology. Unlike many other dwarf planets, Makemake has no known moons.</li>
                 </ul>
             </div>
         </section>
@@ -34,7 +34,7 @@
 
     <script>
         document.getElementById('backButton').addEventListener('click', () => {
-            window.location.href = '../index.html';
+            window.location.href = '../far_solar_system/index.html';
         });
     </script>
 </body>
