--- a/information_pages/neptune.html
+++ b/information_pages/neptune.html
@@ -22,9 +22,9 @@
                     This is a detailed description of the celestial body. You can include information such as its composition, orbit, atmosphere, interesting facts, and why it's significant in our solar system.
                 </p>
                 <ul>
-                    <li><strong>Diameter:</strong> X km</li>
-                    <li><strong>Orbit:</strong> Y AU from the Sun</li>
-                    <li><strong>Interesting Fact:</strong> Some cool fact about this planet.</li>
+                    <li><strong>Diameter:</strong> 49,244 km</li>
+                    <li><strong>Orbit:</strong> 30.07 AU from the Sun</li>
+                    <li><strong>Interesting Fact:</strong> Neptune has some of the strongest winds in the Solar System, which can reach speeds of 2,100 km/h, and it is often accompanied by massive storms.</li>
                 </ul>
             </div>
         </section>
