--- a/information_pages/sun.html
+++ b/information_pages/sun.html
@@ -22,9 +22,9 @@
                     This is a detailed description of the celestial body. You can include information such as its composition, orbit, atmosphere, interesting facts, and why it's significant in our solar system.
                 </p>
                 <ul>
-                    <li><strong>Diameter:</strong> X km</li>
-                    <li><strong>Orbit:</strong> Y AU from the Sun</li>
-                    <li><strong>Interesting Fact:</strong> Some cool fact about this planet.</li>
+                    <li><strong>Diameter:</strong> 1,391,000 km</li>
+                    <li><strong>Orbit:</strong> 0 AU from the Sun</li>
+                    <li><strong>Interesting Fact:</strong> The Sun's mass makes up about 99.86% of the entire mass of the Solar System. This means the Sun "dominates" the gravitational influence of the Solar System.</li>
                 </ul>
             </div>
         </section>
