--- a/information_pages/eris.html
+++ b/information_pages/eris.html
@@ -22,9 +22,9 @@
                     This is a detailed description of the celestial body. You can include information such as its composition, orbit, atmosphere, interesting facts, and why it's significant in our solar system.
                 </p>
                 <ul>
-                    <li><strong>Diameter:</strong> X km</li>
-                    <li><strong>Orbit:</strong> Y AU from the Sun</li>
-                    <li><strong>Interesting Fact:</strong> Some cool fact about this planet.</li>
+                    <li><strong>Diameter:</strong> 2,326 km</li>
+                    <li><strong>Orbit:</strong> 96.3 AU from the Sun</li>
+                    <li><strong>Interesting Fact:</strong> Eris is slightly smaller than Pluto but has a greater mass. It was discovered in 2005 and played a significant role in the reclassification of Pluto as a "dwarf planet."</li>
                 </ul>
             </div>
         </section>
@@ -34,7 +34,7 @@
 
     <script>
         document.getElementById('backButton').addEventListener('click', () => {
-            window.location.href = '../index.html';
+            window.location.href = '../far_solar_system/index.html';
         });
     </script>
 </body>
