--- a/information_pages/haumea.html
+++ b/information_pages/haumea.html
@@ -22,9 +22,9 @@
                     This is a detailed description of the celestial body. You can include information such as its composition, orbit, atmosphere, interesting facts, and why it's significant in our solar system.
                 </p>
                 <ul>
-                    <li><strong>Diameter:</strong> X km</li>
-                    <li><strong>Orbit:</strong> Y AU from the Sun</li>
-                    <li><strong>Interesting Fact:</strong> Some cool fact about this planet.</li>
+                    <li><strong>Diameter:</strong> 1,632 km</li>
+                    <li><strong>Orbit:</strong> 43.2 AU from the Sun</li>
+                    <li><strong>Interesting Fact:</strong> Haumea has an unusual, egg-shaped form, likely due to its fast rotation (it spins once every 4 hours). It's also one of the few dwarf planets with a ring system.</li>
                 </ul>
             </div>
         </section>
@@ -34,7 +34,7 @@
 
     <script>
         document.getElementById('backButton').addEventListener('click', () => {
-            window.location.href = '../index.html';
+            window.location.href = '../far_solar_system/index.html';
         });
     </script>
 </body>
