--- a/information_pages/mars.html
+++ b/information_pages/mars.html
@@ -22,9 +22,9 @@
                     This is a detailed description of the celestial body. You can include information such as its composition, orbit, atmosphere, interesting facts, and why it's significant in our solar system.
                 </p>
                 <ul>
-                    <li><strong>Diameter:</strong> X km</li>
-                    <li><strong>Orbit:</strong> Y AU from the Sun</li>
-                    <li><strong>Interesting Fact:</strong> Some cool fact about this planet.</li>
+                    <li><strong>Diameter:</strong> 6,779 km</li>
+                    <li><strong>Orbit:</strong> 1.52 AU from the Sun</li>
+                    <li><strong>Interesting Fact:</strong> Mars has two small moons, Phobos and Deimos, which are believed to be captured asteroids.</li>
                 </ul>
             </div>
         </section>
