--- a/information_pages/mercury.html
+++ b/information_pages/mercury.html
@@ -22,9 +22,9 @@
                     This is a detailed description of the celestial body. You can include information such as its composition, orbit, atmosphere, interesting facts, and why it's significant in our solar system.
                 </p>
                 <ul>
-                    <li><strong>Diameter:</strong> X km</li>
-                    <li><strong>Orbit:</strong> Y AU from the Sun</li>
-                    <li><strong>Interesting Fact:</strong> Some cool fact about this planet.</li>
+                    <li><strong>Diameter:</strong> 4,879 km</li>
+                    <li><strong>Orbit:</strong> 0.39 AU from the Sun</li>
+                    <li><strong>Interesting Fact:</strong> Mercury is the smallest planet in the Solar System, and since it has no atmosphere, daytime temperatures can soar to 430°C, while nighttime temperatures can drop to -180°C!</li>
                 </ul>
             </div>
         </section>
