--- a/information_pages/pluto.html
+++ b/information_pages/pluto.html
@@ -22,9 +22,9 @@
                     This is a detailed description of the celestial body. You can include information such as its composition, orbit, atmosphere, interesting facts, and why it's significant in our solar system.
                 </p>
                 <ul>
-                    <li><strong>Diameter:</strong> X km</li>
-                    <li><strong>Orbit:</strong> Y AU from the Sun</li>
-                    <li><strong>Interesting Fact:</strong> Some cool fact about this planet.</li>
+                    <li><strong>Diameter:</strong> 2,377 km</li>
+                    <li><strong>Orbit:</strong> 39.48 AU from the Sun</li>
+                    <li><strong>Interesting Fact:</strong> Pluto's atmosphere is fascinating because it expands when it gets closer to the Sun and freezes when it's farther away, changing dramatically as it orbits.</li>
                 </ul>
             </div>
         </section>
@@ -34,7 +34,7 @@
 
     <script>
         document.getElementById('backButton').addEventListener('click', () => {
-            window.location.href = '../index.html';
+            window.location.href = '../far_solar_system/index.html';
         });
     </script>
 </body>
