--- a/information_pages/saturn.html
+++ b/information_pages/saturn.html
@@ -22,9 +22,9 @@
                     This is a detailed description of the celestial body. You can include information such as its composition, orbit, atmosphere, interesting facts, and why it's significant in our solar system.
                 </p>
                 <ul>
-                    <li><strong>Diameter:</strong> X km</li>
-                    <li><strong>Orbit:</strong> Y AU from the Sun</li>
-                    <li><strong>Interesting Fact:</strong> Some cool fact about this planet.</li>
+                    <li><strong>Diameter:</strong> 116460 km</li>
+                    <li><strong>Orbit:</strong> 9.58 AU from the Sun</li>
+                    <li><strong>Interesting Fact:</strong> Saturn is famous for its stunning rings, made of frozen water, ice and debris and they are considered one of the most beautiful sights in the Solar System.</li>
                 </ul>
             </div>
         </section>
