--- a/information_pages/uranus.html
+++ b/information_pages/uranus.html
@@ -22,9 +22,9 @@
                     This is a detailed description of the celestial body. You can include information such as its composition, orbit, atmosphere, interesting facts, and why it's significant in our solar system.
                 </p>
                 <ul>
-                    <li><strong>Diameter:</strong> X km</li>
-                    <li><strong>Orbit:</strong> Y AU from the Sun</li>
-                    <li><strong>Interesting Fact:</strong> Some cool fact about this planet.</li>
+                    <li><strong>Diameter:</strong> 50,724 km</li>
+                    <li><strong>Orbit:</strong> 19.18 AU from the Sun</li>
+                    <li><strong>Interesting Fact:</strong> Uranus is the only planet that rotates "on its side," meaning its axis is almost parallel to its orbit, giving it a unique "tilted" spin.</li>
                 </ul>
             </div>
         </section>
