--- a/information_pages/jupiter.html
+++ b/information_pages/jupiter.html
@@ -3,24 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Planet Name</title>
+    <title>Jupiter</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Planet Name</h1>
+        <h1>Jupiter</h1>
     </header>
 
     <main>
         <section class="details">
             <div class="image-box">
-                <img src="more_pictures/sunpic.jpg" alt="Planet Name">
+                <img src="more_pictures/jupiterpic.webp" alt="Jupiter">
             </div>
             <div class="info-box">
-                <h2>About Planet Name</h2>
+                <h2>About Jupiter</h2>
                 <p>
-                    This is a detailed description of the celestial body. You can include information such as its composition, orbit, atmosphere, interesting facts, and why it's significant in our solar system.
-                </p>
+                    Jupiter is the fifth planet from the Sun and the largest in the Solar System. It is a gas giant with a mass more than 2.5 times that of all the other planets in the Solar System combined and slightly less than one-thousandth the mass of the Sun. It is the third brightest natural object in the Earth's night sky, after the Moon and Venus, and has been observed since prehistoric times. Its name derives from that of Jupiter, the chief deity of ancient Roman religion.                </p>
                 <ul>
                     <li><strong>Diameter:</strong> 139,820 km</li>
                     <li><strong>Orbit:</strong> 5.20 AU from the Sun</li>
