--- a/information_pages/saturn.html
+++ b/information_pages/saturn.html
@@ -3,24 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Planet Name</title>
+    <title>Saturn</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Planet Name</h1>
+        <h1>Saturn</h1>
     </header>
 
     <main>
         <section class="details">
             <div class="image-box">
-                <img src="more_pictures/sunpic.jpg" alt="Planet Name">
+                <img src="more_pictures/saturnpic.jpg" alt="Saturn">
             </div>
             <div class="info-box">
-                <h2>About Planet Name</h2>
+                <h2>About Saturn</h2>
                 <p>
-                    This is a detailed description of the celestial body. You can include information such as its composition, orbit, atmosphere, interesting facts, and why it's significant in our solar system.
-                </p>
+                    Saturn is the sixth planet from the Sun and the second largest in the Solar System, after Jupiter. It is a gas giant, with an average radius of about nine times that of Earth. Even though Saturn is almost as big as Jupiter, Saturn has less than a third the mass of Jupiter. Saturn's interior is thought to be composed of a rocky core, surrounded by a deep layer of metallic hydrogen, an intermediate layer of liquid hydrogen and liquid helium, and an outer layer of gas.                </p>
                 <ul>
                     <li><strong>Diameter:</strong> 116460 km</li>
                     <li><strong>Orbit:</strong> 9.58 AU from the Sun</li>
