--- a/information_pages/sun.html
+++ b/information_pages/sun.html
@@ -3,24 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Planet Name</title>
+    <title>The Sun</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Planet Name</h1>
+        <h1>The Sun</h1>
     </header>
 
     <main>
         <section class="details">
             <div class="image-box">
-                <img src="more_pictures/sunpic.jpg" alt="Planet Name">
+                <img src="more_pictures/sunpic.jpg" alt="The Sun">
             </div>
             <div class="info-box">
-                <h2>About Planet Name</h2>
+                <h2>About the Sun</h2>
                 <p>
-                    This is a detailed description of the celestial body. You can include information such as its composition, orbit, atmosphere, interesting facts, and why it's significant in our solar system.
-                </p>
+                    The Sun is the Solar System's star and by far its most massive component. Its large mass  which comprises 99.86% of all the mass in the Solar System, produces temperatures and densities in its core high enough to sustain nuclear fusion of hydrogen into helium.
+                    The Sun is a population I star, having formed in the spiral arms of the Milky Way galaxy.
+                                    </p>
                 <ul>
                     <li><strong>Diameter:</strong> 1,391,000 km</li>
                     <li><strong>Orbit:</strong> 0 AU from the Sun</li>
