--- a/information_pages/comets.html
+++ b/information_pages/comets.html
@@ -3,24 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Planet Name</title>
+    <title>Halley's comet</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Planet Name</h1>
+        <h1>Halley's comet</h1>
     </header>
 
     <main>
         <section class="details">
             <div class="image-box">
-                <img src="more_pictures/sunpic.jpg" alt="Planet Name">
+                <img src="more_pictures/cometpic.jpg" alt="Halley's comet">
             </div>
             <div class="info-box">
-                <h2>About Planet Name</h2>
+                <h2>About Halley's comet</h2>
                 <p>
-                    This is a detailed description of the celestial body. You can include information such as its composition, orbit, atmosphere, interesting facts, and why it's significant in our solar system.
-                </p>
+                    Halley's Comet is the only known short-period comet that is consistently visible to the naked eye from Earth, appearing every 72–80 years, though with the majority of recorded apparations (25 of 30) occurring after 75–77 years. It last appeared in the inner parts of the Solar System in 1986 and will next appear in mid-2061. Officially designated 1P/Halley, it is also commonly called Comet Halley, or sometimes simply Halley. <br>
+                    Halley's periodic returns to the inner Solar System have been observed and recorded by astronomers around the world since at least 240 BC, but it was not until 1705 that the English astronomer Edmond Halley understood that these appearances were re-appearances of the same comet. As a result of this discovery, the comet is named after Halley.                </p>
                 <ul>
                     <li><strong>Diameter:</strong> 11 km</li>
                     <li><strong>Orbit:</strong> 0.59 AU from the Sun at closest <br>
