--- a/information_pages/earth.html
+++ b/information_pages/earth.html
@@ -3,24 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Planet Name</title>
+    <title>The Earth</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Planet Name</h1>
+        <h1>The Earth</h1>
     </header>
 
     <main>
         <section class="details">
             <div class="image-box">
-                <img src="more_pictures/sunpic.jpg" alt="Planet Name">
+                <img src="more_pictures/earthpic.jpg" alt="Earth">
             </div>
             <div class="info-box">
-                <h2>About Planet Name</h2>
+                <h2>About Earth</h2>
                 <p>
-                    This is a detailed description of the celestial body. You can include information such as its composition, orbit, atmosphere, interesting facts, and why it's significant in our solar system.
-                </p>
+                    Venus is the second planet from the Sun. Earth is the only place in the universe where life and surface liquid water are known to exist. Earth's atmosphere contains 78% nitrogen and 21% oxygen, which is the result of the presence of life. The planet has a complex climate and weather system, with conditions differing drastically between climate regions. The solid surface of Earth is dominated by green vegetation, deserts and white ice sheets.                </p>
                 <ul>
                     <li><strong>Diameter:</strong> 12,742 km</li>
                     <li><strong>Orbit:</strong> 1 AU from the Sun (149.6 million km)</li>
