--- a/information_pages/eris.html
+++ b/information_pages/eris.html
@@ -3,24 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Planet Name</title>
+    <title>Eris</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Planet Name</h1>
+        <h1>Eris</h1>
     </header>
 
     <main>
         <section class="details">
             <div class="image-box">
-                <img src="more_pictures/sunpic.jpg" alt="Planet Name">
+                <img src="more_pictures/erispic.jpg" alt="Eris">
             </div>
             <div class="info-box">
-                <h2>About Planet Name</h2>
+                <h2>About Eris</h2>
                 <p>
-                    This is a detailed description of the celestial body. You can include information such as its composition, orbit, atmosphere, interesting facts, and why it's significant in our solar system.
-                </p>
+                    Eris is the most massive and second-largest known dwarf planet in the Solar System. It is a trans-Neptunian object (TNO) in the scattered disk and has a high-eccentricity orbit. Eris was discovered in January 2005 by a Palomar Observatory–based team led by Mike Brown and verified later that year. It was named in September 2006 after the Greco–Roman goddess of strife and discord. Eris is the ninth-most massive known object orbiting the Sun and the sixteenth-most massive overall in the Solar System (counting moons). It is also the largest known object in the solar system that has not been visited by a spacecraft. Eris has been measured at 2,326 ± 12 kilometres in diameter; its mass is 0.28% that of the Earth and 27% greater than that of Pluto, although Pluto is slightly larger by volume. Both Eris and Pluto have a surface area that is comparable to that of Russia or South America.                </p>
                 <ul>
                     <li><strong>Diameter:</strong> 2,326 km</li>
                     <li><strong>Orbit:</strong> 96.3 AU from the Sun</li>
