--- a/information_pages/uranus.html
+++ b/information_pages/uranus.html
@@ -3,24 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Planet Name</title>
+    <title>Uranus</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Planet Name</h1>
+        <h1>Uranus</h1>
     </header>
 
     <main>
         <section class="details">
             <div class="image-box">
-                <img src="more_pictures/sunpic.jpg" alt="Planet Name">
+                <img src="more_pictures/uranuspic.jpg" alt="Uranus">
             </div>
             <div class="info-box">
-                <h2>About Planet Name</h2>
+                <h2>About Uranus</h2>
                 <p>
-                    This is a detailed description of the celestial body. You can include information such as its composition, orbit, atmosphere, interesting facts, and why it's significant in our solar system.
-                </p>
+                    Uranus is the seventh planet from the Sun. It is a gaseous cyan-coloured ice giant. Most of the planet is made of water, ammonia, and methane in a supercritical phase of matter, which astronomy calls "ice" or volatiles. The planet's atmosphere has a complex layered cloud structure and has the lowest minimum temperature (49 K (−224 °C; −371 °F)) of all the Solar System's planets. Like the other giant planets, Ur anus has a ring system, a magnetosphere, and many natural satellites.                </p>
                 <ul>
                     <li><strong>Diameter:</strong> 50,724 km</li>
                     <li><strong>Orbit:</strong> 19.18 AU from the Sun</li>
