--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <header>
         <h1>Welcome to the Solar System</h1>
+        <p>Choose your home planet to start exploring and editing its details.</p>
     </header>
+    
     <nav>
         <a href="#sun">Sun</a>
         <a href="#mercury">Mercury</a>
