--- a/far_solar_system/index.html
+++ b/far_solar_system/index.html
@@ -20,6 +20,7 @@
         <a href="#sedna">Sedna</a>
         <a href="../index.html">Inner Solar System</a>
     </nav>
+    <a href="login.html"><button>Login</button></a>
     <main>
         <section id="pluto">
             <div class="planet">
