--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a href="#neptune">Neptune</a>
         <a href="far_solar_system/index.html">Outer Solar System</a>
     </nav>
-    <a href="login.html"><button>Login</button></a>
+    <a href="login.html" class="login-btn">Bejelentkezés</a>
     <main>
         <section id="sun" class="planet">
             <div class="content">
