--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="#saturn">Saturn</a>
         <a href="#uranus">Uranus</a>
         <a href="#neptune">Neptune</a>
-        <a href="far_solar_system/index.html">Outer Solar System</a>
+        <a href="index2.html">Outer Solar System</a>
     </nav>
     <a href="login.html" class="login-btn">Bejelentkezés</a>
     <main>
