--- a/information_pages/comets.html
+++ b/information_pages/comets.html
@@ -35,7 +35,7 @@
 
     <script>
         document.getElementById('backButton').addEventListener('click', () => {
-            window.location.href = '../far_solar_system/index.html';
+            window.location.href = '../index2.html';
         });
     </script>
 </body>
