--- a/information_pages/pluto.html
+++ b/information_pages/pluto.html
@@ -33,7 +33,7 @@
 
     <script>
         document.getElementById('backButton').addEventListener('click', () => {
-            window.location.href = '../far_solar_system/index.html';
+            window.location.href = '../index2.html';
         });
     </script>
 </body>
