--- a/index2.html
+++ b/index2.html
@@ -20,7 +20,7 @@
         <a href="#sedna">Sedna</a>
         <a href="index.html">Inner Solar System</a>
     </nav>
-    <a href="login.html"><button>Login</button></a>
+    <a href="login.html" class="login-btn">Login</a>
     <main>
         <section id="pluto">
             <div class="planet">
@@ -62,7 +62,7 @@
         </section>
         <section id="makemake" class="planet">
             <div class="content">
-                <a href="../Solar_System_webpage/information_pages/makemake.html"><img src="../Solar_System_webpage/Images/makemake_picture.png" alt="Makemake picture" class="picture"></a>
+                <a href="../Solar_System_webpage/information_pages/makemake.html"><img src="Images/makemake.png" alt="Makemake picture" class="picture"></a>
                 <div class="text">
                     <h2>Makemake</h2>
                     <p>This reddish dwarf planet is one of the coldest objects in the solar system, quietly orbiting in the far reaches of space.</p>
