--- a/VEGLEGES/Solar_System_webpage/login.html
+++ b/VEGLEGES/Solar_System_webpage/login.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            background-image: url(Images/star_background.jpg);
             display: flex;
             justify-content: center;
             align-items: center;
