--- a/VEGLEGES/Solar_System_webpage/index2.html
+++ b/VEGLEGES/Solar_System_webpage/index2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solar System Exploration</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
     <header>
@@ -22,7 +22,7 @@
     </nav>
     <a href="login.html" class="login-btn">Login</a>
     <main>
-        <section id="pluto">
+        <section id="pluto" class="planet">
             <div class="planet">
                 <div class="content">
                     <a href="../Solar_System_webpage/information_pages/pluto.html"><img src="../Solar_System_webpage/Images/pluto_picture.png" alt="Pluto picture" class="picture"></a>
