--- a/VEGLEGES/Solar_System_webpage/index2.html
+++ b/VEGLEGES/Solar_System_webpage/index2.html
@@ -12,6 +12,10 @@
         <h1>Welcome to the Solar System</h1>
     </header>
     <nav>
+        <div id="userInfo" class="fixed-header">
+            <img src="Images/astronaut-helmet.png" alt="Astronaut Icon" class="user-icon">
+            <span id="usernameDisplay">Guest</span>
+        </div>
         <a href="#pluto">Pluto</a>
         <a href="#comet">Halley's comet</a>
         <a href="#haumea">Haumea</a>
@@ -80,10 +84,6 @@
         </section>
     </main>
     <button id="scrollToTop">Scroll to Top</button>
-
-    <footer>
-        <p>&copy; 2024 Solar System Exploration. All rights reserved.</p>
-    </footer>
     <script src="script.js"></script>
 </body>
 </html>
