--- a/VEGLEGES/Solar_System_webpage/login.html
+++ b/VEGLEGES/Solar_System_webpage/login.html
@@ -77,7 +77,7 @@
             const planet = document.getElementById('planet').value;
 
             if (!name || !planet) {
-                document.getElementById('errorMessage').textContent = 'Kérjük, töltse ki mindkét mezőt!';
+                document.getElementById('errorMessage').textContent = 'Please fill in both!';
                 return;
             }
 
